// Original file: apps/ws/src/proto/ws.proto


export interface MessageAttachment {
  'name'?: (string);
  'id'?: (string);
  'size'?: (number);
  'url'?: (string);
  'proxyURL'?: (string);
  'height'?: (number);
  'width'?: (number);
  'contentType'?: (string);
  'description'?: (string);
}

export interface MessageAttachment__Output {
  'name'?: (string);
  'id'?: (string);
  'size'?: (number);
  'url'?: (string);
  'proxyURL'?: (string);
  'height'?: (number);
  'width'?: (number);
  'contentType'?: (string);
  'description'?: (string);
}
